# mempalace-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cliff.toml  entities.json  mempalace.yml  prd-agent-session-sync.md  prd-model2vec-migration.md  prd-multi-domain-semantic-retrieval.md  prd-semantic-search-recall.md  prd-vectorlite-migration.md
.cargo/: config.toml
.github/workflows/: ci.yml  github-release.yml  hakari-diff.yml  release-to-prod.yml
benchmarks/: longmemeval_split_50_450.json  model_bakeoff.md  multi_domain_queries.json
crates/core/: Cargo.toml
crates/core/src/: aaak.rs  agent_sessions.rs  config.rs  entity_detector.rs  error.rs  knowledge_graph.rs  lib.rs  memory.rs  project_miner.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/store/: Cargo.toml  build.rs
crates/store/.mempalace-bin/: vectorlite.dylib
crates/store/src/: lib.rs
crates/workspace-hack/: Cargo.toml
docs/: cloudflare-r2-release-artifacts.md
docs/prds/: prd-model2vec-migration.md  prd-semantic-search-recall.md  prd-vectorlite-migration.md
docs/superpowers/plans/: 2026-05-03-cross-platform-release-ci.md
docs/superpowers/specs/: 2026-05-03-cross-platform-build-ci-design.md
mempalace-skill/: SKILL.md
