[package]
name = "mempalace-core"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-schema.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
ignore.workspace = true
lancedb.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile.workspace = true
